[gd_scene load_steps=10 format=3 uid="uid://5spa5amgsxfm"]

[ext_resource type="Script" uid="uid://bada5mi2dlugm" path="res://scripts/hp_bar.gd" id="1_orq1w"]
[ext_resource type="Texture2D" uid="uid://cfus0jnjm26vl" path="res://assets/shield.png" id="2_0hkbf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgu82"]
bg_color = Color(0.784314, 0.662745, 0.698039, 0.803922)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2wb4"]
bg_color = Color(0.192157, 0.533333, 0.34902, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_tqes5"]
font_size = 48
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq0p4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vx8s"]
bg_color = Color(0.71178, 0.736753, 0.417345, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_36guj"]
font_size = 44

[sub_resource type="LabelSettings" id="LabelSettings_tatyv"]
font_size = 36
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="HP Bar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1638.0
offset_bottom = -998.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("1_orq1w")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 270.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxFlat_vgu82")
theme_override_styles/fill = SubResource("StyleBoxFlat_j2wb4")
value = 100.0
show_percentage = false

[node name="HP" type="Label" parent="."]
layout_mode = 0
offset_left = 76.25
offset_top = 43.75
offset_right = 157.25
offset_bottom = 96.75
text = "0 / 0"
label_settings = SubResource("LabelSettings_tqes5")

[node name="CurrentElement" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = -37.0
offset_right = 356.0
offset_bottom = 16.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = " Element: None"

[node name="ShieldBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 272.0
offset_bottom = 42.0
theme_override_styles/background = SubResource("StyleBoxFlat_cq0p4")
theme_override_styles/fill = SubResource("StyleBoxFlat_0vx8s")
show_percentage = false

[node name="ShieldLabel" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = -17.5
offset_top = 7.5
offset_right = 28.5
offset_bottom = 59.5
text = "15"
label_settings = SubResource("LabelSettings_36guj")

[node name="Shield" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-5, 28.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_0hkbf")

[node name="Statuses" type="Label" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = 89.0
offset_right = 272.0
offset_bottom = 127.0
label_settings = SubResource("LabelSettings_tatyv")
